@@ -1,3 +1,8 @@
+2002-11-18  Jordi Mallach  <jordi@sindominio.net>
+
+	* src/commands.c, src/dialogs.c, src/gtetrinet.c: unify a few strings,
+	to ease translator work (thanks, Gerfried Fuchs).
+
 2002-11-08  Jordi Mallach  <jordi@sindominio.net>
 
 	* Makefile.am: remove ACLOCAL_AMFLAGS definition.
